# grid-intelligence

./: .gitignore  README.md
docs/superpowers/specs/: 2026-06-28-frontend-ux-polish-design.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: build-check.mjs  mock-api.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AppHeader.tsx  BaCompareSelect.tsx  Dashboard.tsx  DataTable.tsx  DemandChart.tsx  DemandCompareChart.tsx  ErrorBanner.tsx  EuropeWeatherMap.tsx  ForecastChart.tsx  ForecastCompareChart.tsx  HBarChart.tsx  KpiCard.tsx  KpiRow.tsx  (+11 more)
platform/: .env.example  .gitignore  LICENSE  Makefile  README.md  Start Grid Platform.bat  Stop Grid Platform.bat  pyproject.toml  requirements-dev.txt  requirements.txt  start-all.cmd  stop-all.cmd
platform/.github/workflows/: ci.yml
platform/data/processed/marts/: dim_balancing_authority.csv  dim_fuel_type.csv  mart_anomalies.csv  mart_demand_hourly.csv  mart_forecast.csv  mart_generation_hourly.csv  mart_ingest_runs.csv  mart_interchange.csv  mart_renewable_share_hourly.csv  mart_source_freshness.csv
platform/dbt/: dbt_project.yml  profiles.yml
platform/dbt/models/: sources.yml
platform/dbt/models/marts/: agg_demand_recent.sql  agg_generation_mix_recent.sql  agg_renewable_share_network.sql  dim_balancing_authority.sql  fct_demand_hourly.sql  fct_generation_hourly.sql  fct_interchange_hourly.sql  schema.yml
platform/dbt/models/staging/: stg_demand.sql  stg_demand_forecast.sql  stg_generation.sql  stg_interchange.sql
platform/dbt/seeds/: balancing_authority_meta.csv  fuel_type_meta.csv
platform/deploy/systemd/: gridintel-api.service  gridintel-scheduler.service
platform/docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  api-contract.md
platform/gridintel/: __init__.py  cli.py  config.py  logging_setup.py  observability.py
platform/gridintel/api/: __init__.py  main.py
platform/gridintel/db/: __init__.py  engine.py  policies.sql  schema.sql
platform/gridintel/ingest/: __init__.py  _http.py  demo_seed.py  eia.py  entsoe.py  jobs.py  noaa.py  openmeteo.py  persist.py  reference.py
platform/gridintel/ml/: __init__.py  jobs.py
platform/gridintel/scheduler/: __init__.py  service.py
platform/powerbi/: README.md  measures.dax  theme.json
platform/scripts/: export-marts.py  install-autostart.ps1  install-timescaledb.ps1  setup-database.ps1  start-all.ps1  start-api.cmd  start-api.vbs  start-scheduler.cmd  start-scheduler.vbs
platform/tests/: conftest.py  test_api.py  test_config.py  test_demo_seed.py  test_eia_client.py  test_noaa_client.py  test_openmeteo_client.py  test_persist_eia.py
(+19 files in other folders)
