[project]
name = "gridintel"
version = "0.1.0"
description = "Real-time grid intelligence platform: streaming ingestion, anomaly detection, and analytics across US + European electricity grids."
authors = [{ name = "Scott Campbell" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "apscheduler>=3.10",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "plotly>=5.22",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.111",
    "respx>=0.21",
    "freezegun>=1.5",
]

[project.scripts]
gridintel = "gridintel.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gridintel*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL", "RUF"]
# Mutable defaults in FastAPI Query() are idiomatic; lazy imports in CLI are
# intentional for fast --help; PLR cyclomatic limits are not useful for SQL-
# heavy code; RUF012 mutable class attrs are intentional for caches.
ignore = [
    "PLR0913", "PLR2004", "PLR0912", "PLR0915",
    "B008",   # FastAPI Query() default
    "PLC0415",# late imports in CLI commands / tests
    "RUF012", # mutable class attrs (caches)
    "RUF001", # ambiguous unicode (we use Greek sigma, em dash, etc.)
    "RUF002",
    "RUF003",
    "B904",   # raise from inside Exception is implicit for HTTPException
    "E501",   # long lines in SQL strings
    "SIM117", # nested with - sometimes more readable
    "C408",   # dict() literal is fine and readable in chart configs
    "E702",   # multi-statement on one line ok for compact dict definitions
    "PLW0603",# global for idempotent log/init caches is intentional
    "RUF005", # tuple concatenation patterns are fine
]

[tool.ruff.lint.per-file-ignores]
"gridintel/cli.py" = ["F401"]   # imports under TYPE_CHECKING-style guards

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
